--- a/vars/common_vars.yaml
+++ b/vars/common_vars.yaml
@@ -1,10 +1,20 @@
 ---
 #VMs
 kubectl_ver: "v1.33"
+
 runc_version: v1.3.2
-cni_version: v1.8.0
+runc_url: "https://github.com/opencontainers/runc/releases/download/{{ runc_version }}/runc.amd64"
+
+#cni_version: v1.8.0
+cni_plugin_version: 'v1.8.0'
+cni_plugin_url: 'https://github.com/containernetworking/plugins/releases/download/{{ cni_plugin_version }}'
+cni_plugin_archive: 'cni-plugins-linux-amd64-{{ cni_plugin_version }}.tgz'
+cni_plugin_sha256: '{{ cni_plugin_url }}/cni-plugins-linux-amd64-{{ cni_plugin_version }}.tgz.sha256'
+cni_plugin_target: '/opt/cni/bin'
+
 controlplane_ip: 192.168.0.202
 controlplane_hostname: k8smaster 
+
 worker01_ip: 192.168.0.211
 worker01_hostname: k8sworker01 
 worker02_ip: 192.168.0.212
@@ -17,3 +27,14 @@ ansible_username: ansible
 server_username: feri
 ubuntu_img_url: https://cloud-images.ubuntu.com/releases/24.04/release/ubuntu-24.04-server-cloudimg-amd64.img
 ubuntu_img_file: ubuntu-24.04-server-cloudimg-amd64.img
+
+##keyring
+# URL to the ASCII-armored public key file
+gpg_key_url: "https://pkgs.k8s.io/core:/stable:/{{ kubectl_ver }}/deb/Release.key"
+# Temporary location to download the ASCII file
+gpg_key_temp_asc: "/tmp/release.key.asc"
+# Destination for the final binary GPG file
+gpg_key_dest: "/etc/apt/keyrings/kubernetes-apt-keyring.gpg"
+repository_name: "kubernetes"
+repository_line: "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/{{ kubectl_ver }}/deb/ /"
+docker_repoline: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu noble stable"
