--- a/salaserver/01-initial-setup.yaml
+++ b/salaserver/01-initial-setup.yaml
@@ -104,6 +104,7 @@
           - ufw
           - cpu-checker
           - gh
+          - virt-top
         state: latest
         update_cache: true
       when: "'servers' in group_names"
