--- a/cloud-vps/01-initial-setup.yaml
+++ b/cloud-vps/01-initial-setup.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: cloud-vm
   become: true
   vars_files:
     - ./vars/common_vars.yaml
@@ -24,15 +24,15 @@
         append: true
         create_home: true
         shell: /bin/bash
-    #
-    # - name: Create a new regular user with sudo privileges for "{{ server_username }}"
-    #   user:
-    #     name: "{{ server_username }}"
-    #     state: present
-    #     groups: sudo
-    #     append: true
-    #     create_home: true
-    #     shell: /bin/bash
+
+    - name: Create a new regular user with sudo privileges for "{{ server_username }}"
+      user:
+        name: "{{ server_username }}"
+        state: present
+        groups: sudo
+        append: true
+        create_home: true
+        shell: /bin/bash
 
     - name: Setup passwordless sudo for "{{ ansible_username }}"
       lineinfile:
@@ -42,13 +42,13 @@
         line: '{{ ansible_username }} ALL=(ALL) NOPASSWD: ALL'
         validate: '/usr/sbin/visudo -cf %s'
 
-    # - name: Setup passwordless sudo for {{ server_username }}
-    #   lineinfile:
-    #     path: /etc/sudoers
-    #     state: present
-    #     regexp: '^{{ server_username }}'
-    #     line: '{{ server_username }} ALL=(ALL) NOPASSWD: ALL'
-    #     validate: '/usr/sbin/visudo -cf %s'
+    - name: Setup passwordless sudo for {{ server_username }}
+      lineinfile:
+        path: /etc/sudoers
+        state: present
+        regexp: '^{{ server_username }}'
+        line: '{{ server_username }} ALL=(ALL) NOPASSWD: ALL'
+        validate: '/usr/sbin/visudo -cf %s'
 
     - name: Mitigations off
       lineinfile:
@@ -62,24 +62,24 @@
       community.general.timezone:
         name: Europe/Bratislava
 
-    # - name: Set authorized key for remote user
-    #   ansible.posix.authorized_key:
-    #     user: "{{ server_username }}"
-    #     state: present
-    #     key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_rsa.pub') }}"
+    - name: Set authorized key for remote user
+      ansible.posix.authorized_key:
+        user: "{{ server_username }}"
+        state: present
+        key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_rsa.pub') }}"
 
     - name: Set authorized key for ansible user
       ansible.posix.authorized_key:
         user: "{{ ansible_username }}"
         state: present
         key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_rsa.pub') }}"
-    #
-    # - name: Disable password authentication for root
-    #   lineinfile:
-    #     path: /etc/ssh/sshd_config
-    #     state: present
-    #     regexp: '^#?PermitRootLogin'
-    #     line: 'PermitRootLogin prohibit-password'
+
+    - name: Disable password authentication for root
+      lineinfile:
+        path: /etc/ssh/sshd_config
+        state: present
+        regexp: '^#?PermitRootLogin'
+        line: 'PermitRootLogin prohibit-password'
 
     - name: SSH client KeepAlive interval
       lineinfile:
@@ -104,7 +104,6 @@
           - gh
         state: latest
         update_cache: true
-      when: "'servers' in group_names"
 
     #- name: UFW - Allow SSH connections
       #community.general.ufw:
