--- a/cloud-vps/01-initial-setup.yaml
+++ b/cloud-vps/01-initial-setup.yaml
@@ -50,12 +50,12 @@
     #     line: '{{ server_username }} ALL=(ALL) NOPASSWD: ALL'
     #     validate: '/usr/sbin/visudo -cf %s'
 
-    - name: Mitigations off
-      lineinfile:
-        path: /etc/default/grub
-        state: present
-        regexp: '^GRUB_CMDLINE_LINUX_DEFAULT'
-        line: 'GRUB_CMDLINE_LINUX="mitigations=off"'
+    # - name: Mitigations off
+    #   lineinfile:
+    #     path: /etc/default/grub
+    #     state: present
+    #     regexp: '^GRUB_CMDLINE_LINUX_DEFAULT'
+    #     line: 'GRUB_CMDLINE_LINUX_DEFAULT="mitigations=off"'
 
     - name: Set timezone to Europe
       become: true
@@ -74,12 +74,13 @@
         state: present
         key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_rsa.pub') }}"
 
-    # - name: Disable password authentication for root
-    #   lineinfile:
-    #     path: /etc/ssh/sshd_config
-    #     state: present
-    #     regexp: '^#?PermitRootLogin'
-    #     line: 'PermitRootLogin prohibit-password'
+    - name: Disable password authentication for root
+      lineinfile:
+        path: /etc/ssh/sshd_config
+        state: present
+        regexp: '^#?PermitRootLogin'
+        line: 'PermitRootLogin No'
+        #line: 'PermitRootLogin prohibit-password'
 
     - name: SSH client KeepAlive interval
       lineinfile:
