--- a/cloud-vps/docker.yaml
+++ b/cloud-vps/docker.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: gcp-servers
+- hosts: cloud-vps
   become: true
   vars_files:
     - ./vars/common-vars.yaml
@@ -38,12 +38,6 @@
         filename: "docker"
         update_cache: yes
 
-    # - name: Keyrings rights, install cert
-    #   shell: |
-    #     sudo install -m 0755 -d /etc/apt/keyrings
-    #     sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
-    #     sudo chmod a+r /etc/apt/keyrings/docker.asc
-    #     echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
     - name: Update apt and install docker-ce
       apt:
