--- a/wireguard/roles/wireguard/tasks/configure.yml
+++ b/wireguard/roles/wireguard/tasks/configure.yml
@@ -7,14 +7,95 @@
     group: root
     mode: "0700"
 
-- name: Generate WireGuard server config
+
+- name: Check if WireGuard config already exists
+  stat:
+    path: "{{ wg_config_dir }}/{{ wg_interface }}.conf"
+  register: wg_config
+
+- name: Generate WireGuard private key
+  ansible.builtin.command: wg genkey
+  register: wg_private_key
+  when: not wg_config.stat.exists
+
+- name: Generate WireGuard public key
+  ansible.builtin.shell: echo "{{ wg_private_key.stdout }}" | wg pubkey
+  register: wg_public_key
+  when: not wg_config.stat.exists
+
+- name: Set WireGuard key facts
+  set_fact:
+    wg_server_private_key: "{{ wg_private_key.stdout }}"
+    wg_server_public_key: "{{ wg_public_key.stdout }}"
+    cacheable: true
+  when: not wg_config.stat.exists
+
+- name: Write WireGuard private key to file
+  copy:
+    content: "{{ wg_server_private_key }}"
+    dest: "{{ wg_config_dir }}/server_private.key"
+    owner: root
+    group: root
+    mode: '0600'
+  when: not wg_config.stat.exists
+
+- name: Write WireGuard public key to file
+  copy:
+    content: "{{ wg_server_public_key }}"
+    dest: "{{ wg_config_dir }}/server_public.key"
+    owner: root
+    group: root
+    mode: '0644'
+  when: not wg_config.stat.exists
+
+
+
+- name: Read existing private key
+  slurp:
+    src: "{{ wg_config_dir }}/server_private.key"
+  register: wg_private_key_slurped
+  when: wg_config.stat.exists
+
+- name: Set private key fact
+  set_fact:
+    wg_server_private_key: "{{ wg_private_key_slurped.content | b64decode | trim }}"
+  when: wg_config.stat.exists
+#
+# - name: Read existing public key
+#   slurp:
+#     src: "{{ wg_config_dir }}/server_public.key"
+#   register: wg_public_key_slurped
+#   when: wg_config.stat.exists
+#
+# - name: Set public key fact
+#   set_fact:
+#     wg_server_public_key: "{{ wg_public_key_slurped.content | b64decode | trim }}"
+#   when: wg_config.stat.exists
+
+
+
+- name: Write WireGuard config
   ansible.builtin.template:
     src: wg0.conf.j2
     dest: "{{ wg_config_dir }}/{{ wg_interface }}.conf"
     owner: root
     group: root
-    mode: "0600"
+    mode: '0600'
   notify: restart wireguard
+  when: not wg_config.stat.exists
+
+
+
+
+
+# - name: Generate WireGuard server config
+#   ansible.builtin.template:
+#     src: wg0.conf.j2
+#     dest: "{{ wg_config_dir }}/{{ wg_interface }}.conf"
+#     owner: root
+#     group: root
+#     mode: "0600"
+#   notify: restart wireguard
 
 - name: Enable and start WireGuard service
   ansible.builtin.systemd:
