--- a/wireguard/inventory/hosts.yml
+++ b/wireguard/inventory/hosts.yml
@@ -3,6 +3,6 @@ all:
     wireguard:
       hosts:
         vpn-server:
-          ansible_host: 46.225.229.206
+          ansible_host: {{ wg_server_host }}
           ansible_user: root
           ansible_ssh_private_key_file: ~/.ssh/id_rsa
