--- a/cloud-vps/vars/haproxy.cfg
+++ b/cloud-vps/vars/haproxy.cfg
@@ -1,3 +1,8 @@
+defaults
+    timeout connect 5000
+    timeout client  50000
+    timeout server  50000
+
 # HTTP -> redirect na HTTPS (this must be mode http)
 frontend http_in
     bind *:80
@@ -13,6 +18,7 @@ frontend https_in
 backend app_tls
     mode tcp
     server s1 127.0.0.1:8043 check
+
 
 
 global
